--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ ADMIN_EMAIL=you@example.com
 AUTOREPLY_SUBJECT="Thank you for your enquiry"
 AUTOREPLY_BODY="Hi {{name}},\n\nThank you for your message — I will reply within one business day with next steps.\n\nBest wishes,\nEhsan Massah"
 AUTOREPLY_DISABLED=false
+UPSTASH_VECTOR_REST_URL=
+UPSTASH_VECTOR_REST_TOKEN=
+UPSTASH_VECTOR_NAMESPACE=
+KV_REST_API_URL=
+KV_REST_API_TOKEN=
