--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@upstash/vector": "^1.2.2",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^1.2.1",
     "decap-cms": "^3.9.0",
     "gray-matter": "^4.0.3",
