--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "remark": "^15.0.1",
+    "remark-gfm": "^4.0.0",
+    "remark-html": "^16.0.1",
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13",
     "@netlify/plugin-nextjs": "^5.14.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.3",
