--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -4,31 +4,55 @@ backend:
   name: git-gateway
   branch: main
 
-media_folder: "public/uploads"
-public_folder: "/uploads"
+media_folder: public/uploads
+public_folder: /uploads
 
 collections:
-  - name: "resources"
-    label: "Resources"
-    label_singular: "Resource"
-    folder: "content/resources"
+  - name: resources
+    label: Resources
+    folder: content/resources
     create: true
     slug: "{{slug}}"
+    preview_path: resources/{{slug}}
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Summary", name: "summary", widget: "text" }
-      - { label: "Tags", name: "tags", widget: "list" }
-      - { label: "Read Time", name: "readTime", widget: "string", default: "5 min read" }
-      - { label: "Published", name: "published", widget: "datetime", format: "YYYY-MM-DD" }
-      - { label: "Body", name: "body", widget: "markdown", required: false }
+      - { label: Title, name: title, widget: string }
+      - { label: Summary, name: summary, widget: text }
+      - label: Tags
+        name: tags
+        widget: list
+        field:
+          label: Tag
+          name: tag
+          widget: string
+      - label: Keywords
+        name: keywords
+        widget: list
+        field:
+          label: Keyword
+          name: keyword
+          widget: string
+      - { label: Audience, name: audience, widget: string }
+      - { label: Read Time, name: readTime, widget: string }
+      - { label: Published, name: published, widget: datetime, format: "YYYY-MM-DD" }
+      - { label: Updated, name: updated, widget: datetime, format: "YYYY-MM-DD" }
+      - { label: Body, name: body, widget: markdown }
 
-  - name: "posts"
-    label: "Articles"
-    folder: "content/posts"
+  - name: posts
+    label: Articles
+    folder: content/posts
     create: true
     slug: "{{slug}}"
+    preview_path: blog/{{slug}}
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Description", name: "description", widget: "text", required: false }
-      - { label: "Date", name: "date", widget: "datetime", format: "YYYY-MM-DD" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - { label: Title, name: title, widget: string }
+      - { label: Description, name: description, widget: text }
+      - { label: Date, name: date, widget: datetime, format: "YYYY-MM-DD" }
+      - { label: Slug, name: slug, widget: string }
+      - label: Tags
+        name: tags
+        widget: list
+        field:
+          label: Tag
+          name: tag
+          widget: string
+      - { label: Body, name: body, widget: markdown }
